# ca-accounting-env

./: Dockerfile  README.md  data_generator.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
ca_accounting_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: app.py
tasks/: task1_pl.py  task2_variance.py  task3_depreciation.py
