[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-accounting-agent"
version = "1.0.0"
description = "RL Environment for Financial Accounting"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Madhvi Rathor"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "openai",
    "openenv-core"
]

# Dashboard error fix karne ke liye ye entry point update kiya hai
[project.scripts]
ca-accounting-agent = "main:app"

[tool.setuptools]
packages = ["tasks"]

[project.entry-points."openenv.environments"]
ca-accounting = "environment:CAAccountingEnv"