[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-accounting-agent"
version = "1.0.3"
description = "RL Environment for Financial Accounting"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Madhvi Rathor"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "openai",
    "openenv-core"
]

# Dashboard ka "Missing server entry point" error yahi line theek karegi
[project.scripts]
server = "main:main"

[tool.setuptools]
packages = ["tasks"]
# Ye line zaruri hai taaki main.py root se pick ho sake
py-modules = ["main", "environment", "inference", "data_generator"]

[project.entry-points."openenv.environments"]
ca-accounting = "environment:CAAccountingEnv"